--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-### Objective-C ###
 # OS X
 .DS_Store
 
@@ -20,12 +19,11 @@ DerivedData
 *.hmap
 *.ipa
 
-# CocoaPods
-Pods
+# Bundler
+.bundle
 
-
-### Xcode ###
-build
-*.xcodeproj/*
-!*.xcodeproj/project.pbxproj
-!*.xcworkspace/contents.xcworkspacedata
+# We recommend against adding the Pods directory to your .gitignore. However
+# you should judge for yourself, the pros and cons are mentioned at:
+# http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
+#
+# Pods/
